# diffron

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.md.bak  SYNC.md  commit-push.bat  pyproject.toml  requirements.txt  setup.py  setup.pyi
diffron/: __init__.py  __init__.pyi  __main__.py  agent_detect.py  agent_detect.pyi  cli.py  cli.pyi  client.py  client.pyi  commit_gen.py  commit_gen.pyi  git_hooks.py  git_hooks.pyi  lemonade.py  lemonade.pyi  models.py  models.pyi  pr_gen.py  pr_gen.pyi  utils.py  utils.pyi
diffron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
diffron/hooks/: prepare-commit-msg  prepare-commit-msg-global.py  prepare-commit-msg.py
docs/: HOOKS.md  PLAN.md  PYPI_RELEASE.md  SETUP.md  USAGE.md
hooks/: aipr.py  prepare-commit-msg  prepare-commit-msg-global.py  prepare-commit-msg.py
tests/: __init__.py  test_commit_gen.py  test_git_hooks.py  test_lemonade.py  test_pr_gen.py  test_utils.py
