[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffron"
version = "0.1.1"
description = "Git commit message and PR description generator using Lemonade"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Diffron Contributors", email = "diffron@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
git = ["gitpython>=3.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
diffron-install-hooks = "diffron.cli:install_hooks_cli"
diffron-uninstall-hooks = "diffron.cli:uninstall_hooks_cli"
diffron-pr = "diffron.cli:pr_description_cli"
diffron-status = "diffron.cli:status_cli"

[project.urls]
Homepage = "https://github.com/diffron/diffron"
Documentation = "https://github.com/diffron/diffron/docs"
Repository = "https://github.com/diffron/diffron"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
diffron = ["py.typed"]
"diffron.hooks" = ["*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
